--- a/2nd-backend/build.gradle
+++ b/2nd-backend/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     //JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     //MariaDB
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
@@ -45,7 +47,8 @@ dependencies {
 
     //test
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 tasks.named('test') {
