--- a/2nd-backend/build.gradle
+++ b/2nd-backend/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    //Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.session:spring-session-data-redis'
+
     //MariaDB
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
