feat/129/email-service

--- a/readingwe-root/settings.gradle
+++ b/readingwe-root/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'readingweroot'
 include 'discovery-server'
 include 'config-server'
 include 'user-service'
+include 'email-service'
