feat/user-service

--- a/readingwe-root/user-service/build.gradle
+++ b/readingwe-root/user-service/build.gradle
@@ -23,6 +23,7 @@ ext {
 }
 
 dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     //JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
