--- a/readingwe-root/api-gateway-service/build.gradle
+++ b/readingwe-root/api-gateway-service/build.gradle
@@ -23,6 +23,10 @@ ext {
 }
 
 dependencies {
+    //gateway
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     //JWT
@@ -33,17 +37,11 @@ dependencies {
     //Bcrypt
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    //JPA
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     //Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.session:spring-session-data-redis'
 
-    //MariaDB
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
     //lombok
     annotationProcessor 'org.projectlombok:lombok'
