--- a/readingwe-root/settings.gradle
+++ b/readingwe-root/settings.gradle
@@ -4,3 +4,5 @@ include 'config-server'
 include 'user-service'
 include 'email-service'
 include 'book-service'
+include 'readingclub-service'
+include 'api-gateway-service'
