--- a/readingwe-root/readingclub-service/build.gradle
+++ b/readingwe-root/readingclub-service/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     //JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     //Redis
