--- a/readingwe-root/book-service/src/main/resources/application.yml
+++ b/readingwe-root/book-service/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 #spring.application.name=user-service
 #spring.application.name=2nd-backend
 spring:
+  application:
+    name: book-service
   datasource:
     url: jdbc:mariadb://dev.macacolabs.site:3306/readwedb
     username: readwe
