--- a/readingwe-root/api-gateway-service/build.gradle
+++ b/readingwe-root/api-gateway-service/build.gradle
@@ -24,28 +24,15 @@ ext {
 
 dependencies {
     //gateway
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     //JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    //Bcrypt
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-
-
-    //Redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.session:spring-session-data-redis'
-
-
-    //lombok
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    compileOnly 'org.projectlombok:lombok'
 
     //test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
