--- a/readingwe-root/api-gateway-service/src/main/resources/application.yml
+++ b/readingwe-root/api-gateway-service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
               predicates:
                 - Path=/book/**,/booklike/**
               filters:
-                - JwtAuthFilter
+                - name: JwtAuthenticationFilter
 
 eureka:
   client:
