--- a/readingwe-root/api-gateway-service/src/main/resources/application.yml
+++ b/readingwe-root/api-gateway-service/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
                 - Path=/book/**,/booklike/**
               filters:
                 - name: JwtAuthenticationFilter
+            - id: readingclub-service
+              uri: lb://READINGCLUB-SERVICE
+              predicates:
+                - Path=/reading-club/**,/review/**
 
 eureka:
   client:
