--- a/readingwe-root/settings.gradle
+++ b/readingwe-root/settings.gradle
@@ -3,5 +3,5 @@ include 'discovery-server'
 include 'user-service'
 include 'email-service'
 include 'book-service'
-include 'readingclubservice'
+include 'readingclub-service'
 include 'api-gateway-service'
