--- a/readingwe-root/api-gateway-service/build.gradle
+++ b/readingwe-root/api-gateway-service/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     //test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.13'
 }
 
 dependencyManagement {
