--- a/readingwe-root/user-service/build.gradle
+++ b/readingwe-root/user-service/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     //test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
 }
 
 dependencyManagement {
