fix/user-service

--- a/readingwe-root/api-gateway-service/src/main/resources/application.yml
+++ b/readingwe-root/api-gateway-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
             - id: user-service
               uri: lb://USER-SERVICE
               predicates:
-                - Path=/auth/**,/user/**
+                - Path=/auth/**,/user/**,/userlike/**
               filters:
                 - JwtAuthenticationFilter
             - id: book-service
