--- a/readingwe-root/api-gateway-service/src/main/resources/application.yml
+++ b/readingwe-root/api-gateway-service/src/main/resources/application.yml
@@ -7,37 +7,53 @@ spring:
       server:
         webflux:
           routes:
-            # 1) user-service Swagger 문서 라우트
-            - id: user-service-api-docs
-              uri: lb://USER-SERVICE
-              predicates:
-                - Path=/user-service/v3/api-docs/**
-              filters:
-                - RewritePath=/user-service/v3/api-docs(?<segment>.*), /v3/api-docs${segment}
+          # 1) user-service Swagger 문서 라우트
+          - id: user-service-api-docs
+            uri: lb://USER-SERVICE
+            predicates:
+              - Path=/user-service/v3/api-docs/**
+            filters:
+              - RewritePath=/user-service/v3/api-docs(?<segment>.*), /v3/api-docs$\{segment}
 
-            # 2) user-service 실제 API 라우트
-            - id: user-service
-              uri: lb://USER-SERVICE
-              predicates:
-                - Path=/auth/**,/user/**,/userlike/**
-              filters:
-                - JwtAuthenticationFilter
+          # 2) user-service 실제 API 라우트 (Jwt 필터 적용)
+          - id: user-service
+            uri: lb://USER-SERVICE
+            predicates:
+              - Path=/auth/**,/user/**,/userlike/**
+            filters:
+              - JwtAuthenticationFilter
 
-            # 3) book-service
-            - id: book-service
-              uri: lb://BOOK-SERVICE
-              predicates:
-                - Path=/book/**,/booklike/**,/book-report/**,/book-report-comment/**,/book-report-like/**
-              filters:
-                - JwtAuthenticationFilter
+          # 3) book-service Swagger 문서 라우트 (Jwt 필터 X)
+          - id: book-service-api-docs
+            uri: lb://BOOK-SERVICE
+            predicates:
+              - Path=/book/v3/api-docs/**
+            filters:
+              - RewritePath=/book/v3/api-docs(?<segment>.*), /v3/api-docs$\{segment}
 
-            # 4) readingclub-service
-            - id: readingclub-service
-              uri: lb://READINGCLUB-SERVICE
-              predicates:
-                - Path=/reading-club/**,/review/**
-              filters:
-                - JwtAuthenticationFilter
+          # 4) book-service 실제 API 라우트
+          - id: book-service
+            uri: lb://BOOK-SERVICE
+            predicates:
+              - Path=/book/**,/booklike/**,/book-report/**,/book-report-comment/**,/book-report-like/**
+            filters:
+              - JwtAuthenticationFilter
+
+          # 5) readingclub-service Swagger 문서 라우트 (Jwt 필터 X)
+          - id: readingclub-service-api-docs
+            uri: lb://READINGCLUB-SERVICE
+            predicates:
+              - Path=/reading-club/v3/api-docs/**
+            filters:
+              - RewritePath=/reading-club/v3/api-docs(?<segment>.*), /v3/api-docs$\{segment}
+
+          # 6) readingclub-service 실제 API 라우트
+          - id: readingclub-service
+            uri: lb://READINGCLUB-SERVICE
+            predicates:
+              - Path=/reading-club/**,/review/**
+            filters:
+              - JwtAuthenticationFilter
 
 eureka:
   client:
