--- a/readingwe-root/readingclub-service/src/main/resources/application.yml
+++ b/readingwe-root/readingclub-service/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     username: readwe
     password: readwe
     driver-class-name: org.mariadb.jdbc.Driver
+    hikari:
+      max-lifetime: 30000
+      connection-timeout: 10000
 
   jpa:
     show-sql: true
