--- a/readingwe-root/api-gateway-service/src/main/resources/application.yml
+++ b/readingwe-root/api-gateway-service/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   application:
     name: api-gateway
 
+
+  data:
+    redis:
+      host: dev.macacolabs.site
+      port: 6789
+
   cloud:
     gateway:
       server:
