--- a/readingwe-root/api-gateway-service/build.gradle
+++ b/readingwe-root/api-gateway-service/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+
+
     //test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
